_sass/devlopr.scss
/* ... */
#navbar-hamburger, #navbar-search{
    color: var(--bold-color) !important;
}

.navbar-dark .navbar-brand {
    color: #ff7601 !important;
}
.navbar-dark .navbar-nav .nav-link {
    color: var(--nav-link-color) !important;
}
.navbar-dark .navbar-toggler {
    border-color:transparent !important;
}

.navbar-brand-img{
    width: 50px;
    height: 50px;
}

.btn-dark {
    background-color:var(--button-background-color) !important;
    color: var(--bold-color) !important;
}

.img-thumbnail {
    padding: .25rem;
    background-color: #000 !important;
    border: 1px solid #020305 !important;
    border-radius: .25rem;
    max-width: 100%;
    height: auto;
    margin: 15px;
}

/* Search Overlay */
.icon{
    font-size: 35px;
}

.search-form-container {
    position: fixed;
    top: 60px;
    left: 0px;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.7);
    background-color: rgba(0,0,0, 0.9); /* Black with a little bit see-through */
    z-index: 101;
    white-space: nowrap;
    visibility:hidden;
    transition: all 0.4s ease-in-out;
    transform: translate(0px, -100%) scale(0, 0);
    -webkit-transition: all 0.5s ease-in-out;
	-moz-transition: all 0.5s ease-in-out;
	-o-transition: all 0.5s ease-in-out;
	-ms-transition: all 0.5s ease-in-out;
	transition: all 0.5s ease-in-out;

    -webkit-transform: translate(0px, -100%) scale(0, 0);
	-moz-transform: translate(0px, -100%) scale(0, 0);
	-o-transform: translate(0px, -100%) scale(0, 0);
	-ms-transform: translate(0px, -100%) scale(0, 0);
	transform: translate(0px, -100%) scale(0, 0);

    opacity: 0;


    &__close {
        position: absolute;
        top: 5%;
        right: 10% !important;
        width: 5%;
        cursor: pointer;
        text-align: center;
        color: orange;

      .icon {
        vertical-align: text-top;
        transition: 0.4s;
        fill: #fff;

        &:hover {
          fill: orange;
          transform: rotate(90deg);
        }
      }

      @media (max-width: 40em) {
        top: 2%;
        right: 5%;
      }
    }

    &.is-active {
      opacity: 1;
      visibility: visible;
      transform: translate(0px, 0px) scale(1, 1);
    }
  }

  .search-form {
    margin-bottom:20px;
    &__field {

        position: absolute;
        top: 10%;
        width: 100%;
        color: #f69801;
        background: rgba(0, 0, 0, 0);
        font-size: 30px;
        font-weight: 300;
        text-align: center;
        border: 0px;
        border-bottom: 1px dashed #ffa000;
        margin: 0px auto;
        margin-top: -51px;
        padding-left: 30px;
        padding-right: 30px;
        outline: none;

      &:focus {
        border: 0;
        border-bottom: 1px dashed #ffa000;
      }
    }

    &__submit { display: none; }

    &__fieldset {
      border: 0;
      margin-top: 10%;
      padding: 0;
    }
  }
  .search-result-container {
     display:none;
  }

  .search-results {
    display: none;
    height: 80vh;
    overflow: auto;
    white-space: normal;
    text-align: center;
    color: lightgrey;

    .heading {
       margin-bottom: 16px !important;
       margin-right: 16px !important;
       font-size: 17px;
       color: lightgrey !important;
    }

    &__item {
       padding-bottom: 16px;
       border-bottom: 1px solid #3b4446;
       margin-top: 50px;

      &__title {
        display: block;
        text-decoration: none;
        font-size: 25px;
        line-height: 25px;
        color: orange !important;
        text-decoration: none;
      }

      &__date {
        color: orange;
        font-size: 15px;
        line-height: 15px;
      }
    }
  }

.breadcrumb {
    margin-top: 45px !important;
    /* margin-right: 20px !important; */
    margin-bottom: 20px !important;
    font-size: 15px;
    background-color: var(--card-background-color) !important;
}

#blog-post-container{
    margin-top: -20px;
    margin-left: -35px;
}

/* Removed snipcart references */

/* jumbotron */
.jumbotron {
    background-color: var(--main-background-color) !important;
    background-image: url('https://images.pexels.com/photos/1037992/pexels-photo-1037992.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260');
    background-attachment: fixed;
    background-size: cover;
    background-position: center;
}
/* pagination */
.pagination-link{
    padding:15px;
    background-color: var(--card-background-color);
    text-decoration: none;
}
.pagination-link a:hover{
    background-color: var(--main-background-color);
    text-decoration: none;
}
.pagination {
    display: -ms-flexbox;
    display: flex;
    padding-left: 0;
    list-style: none;
    border-radius: .25rem;
    margin-left: 20px !important;
}

.jumbotron-heading{
    color: #111;
    font-size: 35px;
}

.lead {
    font-size: 1.30rem !important;
    font-weight: 600;
    color: #111 !important;
}

.fa {
    display: inline-block;
    font: normal normal normal 14px/1 FontAwesome;
    font-size: 25px;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    color: coral;
}

.product{
    width: 29%;
    float:left;
}

/* Share page buttons */
.share-page {
    text-align: center;
    background: var(--button-background-color);
    color: #111;
    padding: 8px 15px;
    border-radius: 5px;
    margin: 1.5 * 1 * 0;

    .share-text{
        color: var(--main-text-color);
    }
}
.fb_iframe_widget span{vertical-align:inherit !important;}

/* floating btn for buy me coffee */
#bmc-wbtn{
    bottom: 40px !important;
}


/* Gallery */
/* image-gallery */
#imageGallery{
    margin-top: 30px;
    margin-bottom: 30px;
}

.lg-progress-bar .lg-progress {
    background-color: #db980f !important;
    height: 4px;
    width: 0;
}


/* Homepage project cards*/

#project-card{
    margin: 0px !important;
}
#article{
    margin-left: 35px !important;
    margin-top: 20px !important;
}
.project_thumbnail{
    text-align: center;
}
.project-img{
    width:150px;
    height:100px;
}
/* ... */

